# SynthCode

./: .gitignore  README.md  docker-compose.yml  main.py  phase2_backend_ai_plan.md  requirements.txt  synthcode_planning.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analyze.py  health.py  router.py
backend/app/cache/: __init__.py  redis_client.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/models/: __init__.py  db.py  schemas.py
backend/app/services/: __init__.py  github_fetcher.py  heuristic.py  inference_client.py  pipeline.py  sampler.py  scorer.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/test_services/: test_heuristic.py  test_pipeline.py  test_sampler.py  test_scorer.py
extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
inference/: .env.example  Dockerfile.gpu  __init__.py  pyproject.toml
inference/app/: __init__.py  config.py  main.py  model_loader.py  predictor.py  schemas.py
inference/ml/: evaluate.py  train.py
inference/ml/dataset/: collect.py  generate.py  preprocess.py
tests/: extension-smoke.test.js  popup-smoke.test.js  test_main.py
