[project]
name = "synthcode-inference"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "transformers>=4.45",
    "torch>=2.4",
    "safetensors>=0.4",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

